se realiza modificaciones al porfesor